testcases/negative/insert-textbox-wrong-doctype.otk
OFFICETALK/1.0
DOCTYPE word

AT body/paragraph[1]
INSERT TEXTBOX width=200pt height=100pt text="Hello"
